# task_management

./: Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13707cb15658_create_tasks_and_task_assignees_table.py  270ba8e98093_create_task_events_and_notifications_.py  7de631754d95_create_users_table.py  9e159894f17d_add_status_to_tasks.py
backend/src/backend/: consts.py  database.py  main.py  models.py
backend/src/backend/auth/: dependencies.py  routes.py  schemas.py  utils.py
backend/src/backend/task/: event.py  permission.py  routes.py  schemas.py
backend/src/backend/user/: routes.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_task.py  test_user.py
